# DeltaZero

./: .gitignore  LICENSE  README.md
.commandcode/: settings.json
.commandcode/taste/: taste.md
.cursor/rules/: deltazero.mdc
.github/workflows/: ci.yml  publish-python-sdk.yml
backend/: README.md  requirements.txt
backend/app/: __init__.py  checkout.py  config.py  main.py  mcp_server.py  payments.py
backend/benchmarks/: README.md  agent_risk_benchmark.py  results.json  safety_buffer_reference.json  safety_buffer_reference.py
backend/scripts/: verify_a2mcp.py
backend/tests/: conftest.py  test_adapter_registry.py  test_audit.py  test_build.py  test_checkout.py  test_hyperliquid.py  test_impairment.py  test_market_data.py  test_mcp.py  test_monte_carlo.py  test_payment_recovery.py  test_payments.py  test_preview.py  test_risk_engine.py  test_risk_explanation.py  test_strategy_registry.py  test_stress_test.py  test_wallet.py  test_wallet_report.py
deliverables/: DeltaZero_Demo_Video_Script_v1.docx  DeltaZero_Demo_Video_Script_v2.docx
docs/: AGENT_INTEGRATION.md  HYPERLIQUID_MARKET_DATA.md  IMPAIRMENT_ENGINE.md  OKX_ASP_SERVICE.md  PROJECT.md  WALLET_AUDITOR.md
examples/agent-bot/: README.md  agent-bot.mjs
frontend/: package-lock.json  package.json
frontend/app/: error.tsx  global-error.tsx  globals.css  (+2 more)
scripts/: build_demo_guide.py
sdk/python/: README.md  pyproject.toml
sdk/python/deltazero/: __init__.py  client.py  models.py
sdk/python/tests/: test_client.py
subscription-gateway/: .env.example  README.md  package-lock.json  package.json
(+99 files in other folders)
